initial changes to add in reset count and green screen to work with OBS

--- a/views/timer.ejs
+++ b/views/timer.ejs
@@ -11,13 +11,17 @@
     <nav class="controls">
         <a href="#" id="btn_start" class="button btn_start">Start</a>
         <a href="#" id="btn_pause" class="button btn_pause">Pause</a>
-        <a href="#" id="btn_passed" class="button btn_passed">Passed</a>
-        <a href="#" id="btn_reset" class="button btn_reset">Reset</a>
+        <a href="#" id="btn_reset" class="button btn_reset">Lap Reset</a>
         <a href="#" id="btn_clear" class="button btn_clear">Clear</a>
+        <br/>
+        <br/>
+        <a href="#" id="btn_lap" class="button btn_lap">Lap</a>
+        <a href="#" id="btn_car_reset" class="button btn_car_reset">Car Reset</a>
     </nav>
     <div class="limiter"></div>
     <div class="display"></div>
-    <div class="bestlap"></div>
+    <div class="bestlap_txt">Best:<span class="bestlap"></span></div>
+    <div class="lastlap_txt">Last:<span class="lastlap"></span></div>
     <ul class="results"></ul>
 </body>
 
