--- a/public/timer.css
+++ b/public/timer.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    background: #111;
+    background: #00b140;
     color: #eee;
     font-family: Menlo, Noto Mono;
 }
@@ -13,7 +13,7 @@ html {
     position: fixed;
     text-align: center;
     top: 1em;
-    width: 85%;
+    width: 100%;
 }
 
 .button {
@@ -42,12 +42,20 @@ html {
     color: #fa3;
 }
 
-.btn_passed {
+.btn_lap {
     color: #4af;
 }
 
 .btn_reset {
     color: #e43;
+}
+
+.btn_car_reset {
+    color: #ec3;
+}
+
+.btn_not_valid {
+    color: #35e;
 }
 
 .btn_clear {
@@ -58,7 +66,7 @@ html {
     font-size: 6vw;
     position: fixed;
     text-align: center;
-    top: 15%;
+    top: 25%;
     width: 85%;
 }
 
@@ -75,18 +83,42 @@ html {
 }
 
 .display {
-    font-size: 15vw;
+    font-size: 10vw;
     position: fixed;
     text-align: center;
-    top: 35%;
+    top: 40%;
+    width: 85%;
+}
+
+.bestlap_txt {
+    font-size: 5vw;
+    position: fixed;
+    text-align: center;
+    top: 70%;
     width: 85%;
 }
 
 .bestlap {
     font-size: 5vw;
     position: fixed;
+    text-align: left;
+    top: 70%;
+    width: 85%;
+}
+
+.lastlap_txt {
+    font-size: 5vw;
+    position: fixed;
     text-align: center;
-    top: 75%;
+    top: 80%;
+    width: 85%;
+}
+
+.lastlap {
+    font-size: 5vw;
+    position: fixed;
+    text-align: left;
+    top: 80%;
     width: 85%;
 }
 
