--- a/views/timer.ejs
+++ b/views/timer.ejs
@@ -20,9 +20,12 @@
     </nav>
     <div class="limiter"></div>
     <div class="display"></div>
-    <div class="bestlap_txt">Best:<span class="bestlap"></span></div>
-    <div class="lastlap_txt">Last:<span class="lastlap"></span></div>
     <ul class="results"></ul>
+    <div id="stream">
+        <div id="session_txt">Time:<span id="session"></span><span id="lapcount_txt">Laps:<span id="lapcount"></span></span></div>
+        <div id="bestlap_txt">Best:<span id="bestlap"></span></div>
+        <div id="lastlap_txt">Last:<span id="lastlap"></span></div>
+    </div>
 </body>
 
 </html>
