Changed to single local image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,13 +14,13 @@
             <div class="flip-body">
                 <div class="face front">
                     <div class="lb-logo-front"><img
-                            src="https://deepracer-logos.s3.ap-northeast-2.amazonaws.com/logo_circuit_challenge.png">
+                            src="images/dr-logo-underground.png">
                     </div>
                 </div>
-                <div class="face back">
+                <!-- <div class="face back">
                     <div class="lb-logo-back"><img
-                            src="https://deepracer-logos.s3.ap-northeast-2.amazonaws.com/logo_deepracer.png"></div>
-                </div>
+                            src="images/dr-logo-underground.png"></div>
+                </div> -->
             </div>
         </div>
     </figure>
@@ -28,12 +28,12 @@
 
 </html>
 
-<script src="/jquery-3.3.1.min.js"></script>
+<script src="/jquery.min.js"></script>
 <script src="/flip.js"></script>
 <script>
-    $(function () {
-        setInterval(function () {
-            flip();
-        }, 5000);
-    });
+    // $(function () {
+    //     setInterval(function () {
+    //         flip();
+    //     }, 5000);
+    // });
 </script>
